--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,8 @@ services:
         condition: service_healthy
       kafka:
         condition: service_started
+      eureka:
+        condition: service_started
   product-p1:
     build:
       context: microservices/product-service
@@ -40,6 +42,8 @@ services:
       mongodb:
         condition: service_healthy
       kafka:
+        condition: service_started
+      eureka:
         condition: service_started
 
   recommendation:
@@ -54,6 +58,8 @@ services:
         condition: service_healthy
       kafka:
         condition: service_started
+      eureka:
+        condition: service_started
   recommendation-p1:
     build:
       context: microservices/recommendation-service
@@ -65,6 +71,8 @@ services:
       mongodb:
         condition: service_healthy
       kafka:
+        condition: service_started
+      eureka:
         condition: service_started
 
   review:
@@ -79,6 +87,8 @@ services:
         condition: service_healthy
       kafka:
         condition: service_started
+      eureka:
+        condition: service_started
   review-p1:
     build:
       context: microservices/review-service
@@ -90,6 +100,8 @@ services:
       postgres:
         condition: service_healthy
       kafka:
+        condition: service_started
+      eureka:
         condition: service_started
 
   mongodb:
@@ -141,3 +153,11 @@ services:
       - "2181:2181"
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
+
+  eureka:
+    build:
+      context: springcloud/eurekaserver
+    image: ecet/my-project-eureka-server
+    mem_limit: 512m
+    ports:
+      - "8761:8761"
