--- a/microservices/product-composite-service/build.gradle
+++ b/microservices/product-composite-service/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 	implementation "org.springdoc:springdoc-openapi-starter-webflux-ui:${openapiVersion}"
 	implementation 'org.springframework.cloud:spring-cloud-starter-stream-kafka'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
