--- a/microservices/product-composite-service/src/main/resources/application.yaml
+++ b/microservices/product-composite-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: product-composite-service
+    name: product-composite
   kafka:
     bootstrap-servers: 127.0.0.1:9092
   cloud:
@@ -35,16 +35,17 @@ server:
   error:
     include-message: always
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
 app:
-  product-service:
-    host: localhost
-    port: 7001
-  recommendation-service:
-    host: localhost
-    port: 7002
-  review-service:
-    host: localhost
-    port: 7003
   threadPoolSize: 10
   taskQueueSize: 100
 
@@ -130,13 +131,7 @@ spring:
 server:
   port: 8080
 
-app:
-  product-service:
-    host: product
-    port: 8080
-  recommendation-service:
-    host: recommendation
-    port: 8080
-  review-service:
-    host: review
-    port: 8080
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
