--- a/microservices/product-service/build.gradle
+++ b/microservices/product-service/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-data-mongodb-reactive"
 	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka-reactive'
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
