--- a/microservices/product-service/src/main/resources/application.yaml
+++ b/microservices/product-service/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: product-service
+    name: product
   data:
     mongodb:
       host: localhost
@@ -41,6 +41,16 @@ server:
   error:
     include-message: always
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    initialInstanceInfoReplicationIntervalSeconds: 5
+    registryFetchIntervalSeconds: 5
+  instance:
+    leaseRenewalIntervalInSeconds: 5
+    leaseExpirationDurationInSeconds: 5
+
 management:
   endpoint:
     health:
@@ -74,6 +84,11 @@ spring:
 
 server:
   port: 8080
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
 
 ---
 spring:
