--- a/compose.yaml
+++ b/compose.yaml
@@ -4,8 +4,6 @@ services:
       context: microservices/product-composite-service
     image: ecet/my-project-product-composite
     mem_limit: 512m
-    ports:
-      - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -156,8 +154,16 @@ services:
 
   eureka:
     build:
-      context: springcloud/eurekaserver
+      context: spring-cloud/eureka-server
     image: ecet/my-project-eureka-server
     mem_limit: 512m
+
+  gateway:
+    build:
+      context: spring-cloud/gateway
+    image: ecet/my-project-gateway
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+    mem_limit: 512m
     ports:
-      - "8761:8761"
+      - "8080:8080"
