--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include ':microservices:recommendation-service'
 include ':microservices:product-composite-service'
 include ':api'
 include ':util'
-include ':springcloud:eurekaserver'
+include ':spring-cloud:eureka-server'
+include ':spring-cloud:gateway'
